--- a/spa.html
+++ b/spa.html
@@ -1,10 +1,19 @@
 <!doctype html>
+<!--
+    spa.html
+    spa ブラウザドキュメント
+-->
+
 <html>
     <head>
+        <!-- IE9以降のレンダリングで、最新の標準をサポート -->
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+        <meta http-equiv="X-UA-Compatible" content="ID=edge" />
         <title>SPA Starter</title>
 
         <!-- スタイルシート -->
         <link rel="stylesheet" href="css/spa.css" type="text/css" />
+        <link rel="stylesheet" href="css/spa.chat.css" type="text/css" />
         <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
 
         <!--thirdparty javascript -->
@@ -13,7 +22,10 @@
 
         <!-- main javascript -->
         <script src="js/spa.js"></script>
+        <script src="js/spa.util.js"></script>
+        <script src="js/spa.model.js"></script>
         <script src="js/spa.shell.js"></script>
+        <script src="js/spa.chat.js"></script>
         <script>
             $(function () { spa.initModule( $('#spa') ); });
         </script>
