--- a/spa.html
+++ b/spa.html
@@ -15,17 +15,25 @@
         <link rel="stylesheet" href="css/spa.css" type="text/css" />
         <link rel="stylesheet" href="css/spa.chat.css" type="text/css" />
         <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
+        <link rel="stylesheet" href="css/spa.avtr.css" type="text/css" />
 
         <!--thirdparty javascript -->
+        <script src="js/jq/taffy.js"></script>
         <script src="js/jq/jquery-1.9.1.js"></script>
         <script src="js/jq/jquery.uriAnchor.js"></script>
+        <script src="js/jq/jquery.event.gevent.js"></script>
+        <script src="js/jq/jquery.event.ue.js"></script>
 
         <!-- main javascript -->
         <script src="js/spa.js"></script>
         <script src="js/spa.util.js"></script>
+        <script src="js/spa.data.js"></script>
+        <script src="js/spa.fake.js"></script>
         <script src="js/spa.model.js"></script>
+        <script src="js/spa.util_b.js"></script>
         <script src="js/spa.shell.js"></script>
         <script src="js/spa.chat.js"></script>
+        <script src="js/spa.avtr.js"></script>
         <script>
             $(function () { spa.initModule( $('#spa') ); });
         </script>
