add data module

--- a/spa.html
+++ b/spa.html
@@ -19,6 +19,7 @@
 
         <!--thirdparty javascript -->
         <script src="js/jq/taffy.js"></script>
+        <script src="socket.io/socket.io.js"></script>
         <script src="js/jq/jquery-1.9.1.js"></script>
         <script src="js/jq/jquery.uriAnchor.js"></script>
         <script src="js/jq/jquery.event.gevent.js"></script>
